# chrono-canvas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE  Makefile  PRODUCT.md  README.md  TECHNICAL.md  blog-series-suggestions.md  code_review_001.md  docker-compose.dev.yml  docker-compose.yml  plan.md  prd-audit-trail.md
.beads/: issues.jsonl  metadata.json
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml
cli/: pyproject.toml
cli/src/chronocanvas_cli/: client.py  main.py  output.py
cli/src/chronocanvas_cli/commands/: add.py  agents.py  batch.py  download.py  generate.py  list_cmd.py  status.py  validate.py
cli/src/historylens_cli/: client.py  main.py
cli/src/historylens_cli/commands/: add.py  agents.py  batch.py  download.py  generate.py  list_cmd.py  status.py  validate.py
docker/: Dockerfile.api  Dockerfile.facefusion  Dockerfile.frontend  entrypoint.sh  facefusion_server.py  nginx.conf  wait-for-it.sh
docs/: api.md  architecture-invariants.md  deployment-hardening.md  development.md  prd-face-swap.md  workflow.md
eval/: README.md
frontend/: capture-screenshots.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: bake-demo.py  build-vendor-wheels.sh  capture-screenshots.ts  cc-remote-diag.sh  check_env_keys.py  cloud-logs.sh  deploy-mark.sh  deploy-status.sh  quickstart.sh  record-demo-video.mjs  record-hackathon-video.mjs  record-pipeline-gif.mjs  smoke-test.sh  test_hackathon_flags.py  test_live_session.py  test_llm_diagnostics.py  verify_imports.py
(+415 files in other folders)
