[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "historylens-cli"
version = "0.1.0"
description = "CLI for HistoryLens"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
historylens = "historylens_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/historylens_cli"]
