[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronocanvas-cli"
version = "0.1.0"
description = "CLI for ChronoCanvas"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
chronocanvas = "chronocanvas_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/chronocanvas_cli"]
